# cwapi3d-essentials

./: app.py  cwapi3d_essentials.py  pyproject.toml
docs/de/: 0_cwapi3d_general.md  1_cadwork_element.md  2_axis-system.md  3_brep.md  4_linear-algebra.md  5_design.md  6_PyQt5-basics.md  PyQt5-basics.md  axis-system.md  cadwork_element.md  design.md  linear-algebra.md
docs/en/: axis-system.md
src/essentials/adapters/: __init__.py  _utils.py  bim_controller_wrapper.py  element_controller_wrapper.py  ifc_export_options.py  ifc_export_strategies.py  ifc_level_of_detail_options.py  ifc_property_options.py  ifc_utils.py
src/essentials/beam_elements/: beam_factory.py
src/essentials/math/: basic_vector_operations.py
src/essentials/models/: __init__.py  axis_system.py  dimensions.py
tests/: test_example.py  test_point3d.py
