[tool.poetry]
name = "cwapi3d-essentials"
version = "0.1.0"
description = ""
authors = ["Michael Brunner <brunner@cadwork.swiss>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cwapi3d = "^32.274.0"
cwmath = "^0.0.9"
poetry-core = "^2.1.3"

[tool.mypy]
ignore_missing_imports = false
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
